--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,11 @@ body{
 
 .timer{
     text-align:center;
-    height:60px;
+    height:120px;
 
 }
 
-.question1{
+#question{
     text-align: center;
 }
 
@@ -33,7 +33,7 @@ body{
 
 h3:hover{
     color:white;
-    background-color: gray;
+    
 }
 
 
